# Agile-Demo

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_user_story.md  02_bug_report.md  config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.hypothesis/constants/: 181ebadf6f8e7289  648b574623ae11b9  67b0a8ccf18bf5d2  da39a3ee5e6b4b0d
src/: app.py
src/agile_ci_demo/: app.py
src/agile_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_acceptance_items.py  test_app.py
tests/features/: items.feature
